@@ -26,50 +26,7 @@ module Test
       DEFAULT_CREDENTIALS = File.dirname(__FILE__) + '/fixtures.yml' unless defined?(DEFAULT_CREDENTIALS)
       
       include ActiveMerchant::Billing
-    
-      # Allows the testing of you to check for negative assertions: 
-      # 
-      #   # Instead of
-      #   assert !something_that_is_false
-      # 
-      #   # Do this
-      #   assert_false something_that_should_be_false
-      # 
-      # An optional +msg+ parameter is available to help you debug.
-      def assert_false(boolean, message = nil)
-        message = build_message message, '<?> is not false or nil.', boolean
-        assert_block message do
-          not boolean
-        end
-      end
-          
-      # A handy little assertion to check for a successful response: 
-      # 
-      #   # Instead of
-      #   assert_success response
-      # 
-      #   # DRY that up with
-      #   assert_success response
-      # 
-      # A message will automatically show the inspection of the response 
-      # object if things go afoul.
-      def assert_success(response)
-        assert response.success?, "Response failed: #{response.inspect}"
-      end
-      
-      # The negative of +assert_success+
-      def assert_failure(response)
-        assert_false response.success?, "Response expected to fail: #{response.inspect}"
-      end
-      
-      def assert_valid(validateable)
-        assert validateable.valid?, "Expected to be valid"
-      end
-      
-      def assert_not_valid(validateable)
-        assert_false validateable.valid?, "Expected to not be valid"
-      end
-    
+  
       private
       def generate_order_id
         md5 = Digest::MD5.new
@@ -125,6 +82,60 @@ module Test
       def assert_field(field, value)
         clean_backtrace do 
           assert_equal value, @helper.fields[field]
+        end
+      end
+      
+      # Allows the testing of you to check for negative assertions: 
+      # 
+      #   # Instead of
+      #   assert !something_that_is_false
+      # 
+      #   # Do this
+      #   assert_false something_that_should_be_false
+      # 
+      # An optional +msg+ parameter is available to help you debug.
+      def assert_false(boolean, message = nil)
+        message = build_message message, '<?> is not false or nil.', boolean
+        
+        clean_backtrace do
+          assert_block message do
+            not boolean
+          end
+        end
+      end
+          
+      # A handy little assertion to check for a successful response: 
+      # 
+      #   # Instead of
+      #   assert_success response
+      # 
+      #   # DRY that up with
+      #   assert_success response
+      # 
+      # A message will automatically show the inspection of the response 
+      # object if things go afoul.
+      def assert_success(response)
+        clean_backtrace do
+          assert response.success?, "Response failed: #{response.inspect}"
+        end
+      end
+      
+      # The negative of +assert_success+
+      def assert_failure(response)
+        clean_backtrace do
+          assert_false response.success?, "Response expected to fail: #{response.inspect}"
+        end
+      end
+      
+      def assert_valid(validateable)
+        clean_backtrace do
+          assert validateable.valid?, "Expected to be valid"
+        end
+      end
+      
+      def assert_not_valid(validateable)
+        clean_backtrace do
+          assert_false validateable.valid?, "Expected to not be valid"
         end
       end
 
